network-policies/base/allow-kube-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-api
  labels:
    app.kubernetes.io/name: allow-kube-api
    app.kubernetes.io/part-of: network-policies
    app.kubernetes.io/component: baseline
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
